--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
   <link rel="mask-icon" href="safari-pinned-tab.svg" color="#353535">
   <meta name="theme-color" content="#353535">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-151253199-2"></script>
 </head>
 
 <body>
