--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,13 @@
   <meta name="theme-color" content="#353535">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-151253199-2"></script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-151253199-2"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+  </script>
 </head>
 
 <body>
